--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: training-management-server
     env: node
     buildCommand: npm install && npm run build
-    startCommand: npm start
+    startCommand: node ./dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
